# vaultASR

./: .gitignore  .gitmodules  ARCHITECTURE_V2.md  CMakeLists.txt  LICENSE  README.md  architecture_documentation.md
scripts/: check_onnx.py  check_onnx2.py  check_onnx3.py  download.py  download_model.sh  dump_vocab.py  export_wespeaker.py  setup.sh
src/: audio_utils.cpp  audio_utils.hpp  clustering.cpp  clustering.hpp  kaldi_fbank.cpp  kaldi_fbank.hpp  main.cpp  main_metal.cpp  mel_spectrogram.cpp  mel_spectrogram.hpp  silero_vad.cpp  silero_vad.hpp  wespeaker_embedder.cpp  wespeaker_embedder.hpp  whisper_inference.cpp  whisper_inference.hpp  whisper_mel_filters.hpp  whisper_tokens.hpp
src/v2/: audio_decoder.cpp  audio_decoder.h  denoiser.cpp  denoiser.h  exporter.cpp  exporter.h  kaldi_fbank.cpp  kaldi_fbank.h  logger.h  main.cpp  pipeline.cpp  pipeline.h  post_processor.cpp  post_processor.h  progress.h  speaker_cluster.cpp  speaker_cluster.h  speaker_embedder.cpp  speaker_embedder.h  transcriber.cpp  transcriber.h  types.h  vad.cpp  vad.h
